# check_proxmox_running_autostart

./: .gitlab-ci.yml  check_proxmox_running_autostart.py  config.sample.ini  setup.cfg
pve_checks/: __init__.py  backup.py  evictability.py  nagios.py  running_autostart.py
