[metadata]
name = pve_checks
version = 1.0
description = Various Nagios checks for Proxmox Virtualized Environment
license = BSD-2
author = Jan-Philipp Litza (PLUTEX)
author_email = jpl@plutex.de

[options]
packages = pve_checks
install_requires = proxmoxer

[options.extras_require]
cmd = argh

[options.entry_points]
console_scripts =
    check_proxmox_running_autostart = pve_checks.running_autostart:main [cmd]
    check_proxmox_backup = pve_checks.backup:main [cmd]
    check_proxmox_evictability = pve_checks.evictability:main [cmd]
